static/theme-flex/style.css
/* ... */
div.notices.note {
  border-top: 30px solid #6bb1e0;
  background: #e6f3fb;
  color: rgba(47, 103, 141, 0.995) !important; }

div.notices.info {
  border-top: 30px solid #f1b37e;
  background: #fefaf5;
  color: rgba(150, 90, 38, 0.995) !important; }

div.notices.tip {
  border-top: 30px solid #84c578;
  background: #e8f7e6;
  color: rgba(72, 125, 63, 0.995) !important; }

div.notices.warning {
  border-top: 30px solid #d58181;
  background: #fbeded;
  color: rgba(132, 56, 56, 0.995) !important; }

ul.children.children-card {
  flex-wrap: wrap;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between; }
  ul.children.children-card > span {
    -webkit-box-flex: 1;
    -ms-flex: 1 1 auto;
    flex: 1 1;
    min-width: 0;
    min-height: 0;
    width: 40%;
    min-width: 190px;
    margin: 1rem 1rem;
    border: 0.1rem solid #ccc;
    border-radius: 1rem;
    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1); }
    ul.children.children-card > span card {
      margin: 0px 0px;
      display: block;
      padding: 1rem;
      background-color: #d3dee3;
      font-size: 150%; 
      border-radius: .9rem .9rem 0 0; }
    ul.children.children-card > span card a.highlight {
      font-size: 120%;
      font-family: 'Podkova', serif; }
    ul.children.children-card > span p {
      padding: 0rem 1rem; }

@media (max-width: 1024px) {
  section {
    margin-right: 0; }

  section > .toc {
    display: none; } }
@media (max-width: 768px) {
  article {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column; }

  article > aside {
    display: none; }

  footer {
    display: none; }

  article > section.page {
    margin: 0 0;
    padding: 1rem; }

  article > section.page #navigation label {
    display: none; }

  section {
    margin: 0;
    padding: 1rem 2rem; }

  header {
    padding: 0 1rem; }

  header > nav.shortcuts > li a {
    width: 3.5rem; }

  header > nav.shortcuts > li .fa {
    margin: 0; }

  header > nav.shortcuts > li > a > label {
    display: none; }

  header > nav.shortcuts > li > a {
    max-width: 32px; }

  .nav-select {
    display: block;
    margin-left: -10px;
    margin-right: -10px; }

  .nav-select select {
    display: block; }

  article img {
    margin-left: -1rem;
    margin-right: -1rem; } }

/*# sourceMappingURL=style.css.map */

